# LogParser

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  Frontend.cpp  Frontend.h  GemCluster.cpp  GemCluster.h  Move.cpp  Move.h  Player.cpp  Player.h  README.md  SplendorBoardParser.cpp  SplendorLogParser.cpp  Table.cpp  Table.h  cerrLogParser.cpp  frontend.cpp  log.txt  log_hhh.txt  main.cpp  stderr_hhh.txt  temp_board.json
